--- a/trunk/user/dropbear/Makefile
+++ b/trunk/user/dropbear/Makefile
@@ -22,7 +22,7 @@ config_test:
 	fi )
 
 configure:
-	( cd $(SRC_NAME) ; autoconf; autoheader; \
+	( cd $(SRC_NAME) ; \
 	./configure \
 		--prefix=/usr \
 		--disable-lastlog \
