--- a/trunk/configs/templates/psg1218_base.config
+++ b/trunk/configs/templates/psg1218_base.config
@@ -7,7 +7,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="PSG1218"
 
 ### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.4.x
-CONFIG_TOOLCHAIN_DIR=/media/Storage/workspace/router/rt-n56u/toolchain-mipsel
+CONFIG_TOOLCHAIN_DIR=~/router/rt-n56u/toolchain-mipsel
 
 ############################################################
 ### Linux kernel configuration
@@ -204,4 +204,3 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include Aria2 WEB control. ~0.7MB
 #CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
-
